--- a/src/components/MyExperiences/my-experiences.styles.scss
+++ b/src/components/MyExperiences/my-experiences.styles.scss
@@ -55,6 +55,7 @@
   .my-search {
     position: sticky !important;
     width: 300px;
+    z-index:1;
   }
 
   .search-experience-link {
